--- a/index.html
+++ b/index.html
@@ -753,18 +753,18 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="Blog.png" alt="Ziranek Hub" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Ziranek Hub</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Blog development</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Blog">
+              <a href="https://ziranek.github.io/blog/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
