--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="Blog.png" alt="Ziranek Hub" loading="lazy">
+                  <img src="Blog.PNG" alt="Ziranek Hub" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Ziranek Hub</h3>
