--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://ziranek.github.io/blog/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -771,10 +771,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="2ndport.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Portfolio</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -782,7 +782,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://ziranek.github.io/2nd-portfolio.io/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -792,7 +792,7 @@
                   <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Portfolio</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -807,36 +807,36 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="Event Planner.Png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Event planner site</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Website</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://babisco-world.github.io/babisco/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="Funbud.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Funbud Game</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Software</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://ziranek.github.io/FUNBUD/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
